[tool.poetry]
name = "embedsense"
version = "0.1.0"
description = ""
authors = ["John Beatty <john.beatty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.7"
python-dotenv = "^1.0.0"
numpy = "^1.26.2"
cohere = "^4.37"
sentence-transformers = "^2.2.2"
tabulate = "^0.9.0"
instructorembedding = "^1.0.1"
voyageai = "^0.1.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
